[package]
name = "stream-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
streamlang = { path = "../streamlang" }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4",
    "--enable-bulk-memory",
    "--enable-threads",
    "--enable-mutable-globals",
]
